tests/ui/asm/fail-const-eval-issue-121099.stderr
error[E0080]: evaluation of `{global_asm#0}::{constant#0}` failed
  --> $DIR/fail-const-eval-issue-121099.rs:8:31
   |
LL | global_asm!("/* {} */", const 1 << 500);
   |                               ^^^^^^^^ attempt to shift left by `500_i32`, which would overflow

error[E0080]: evaluation of `{global_asm#1}::{constant#0}` failed
  --> $DIR/fail-const-eval-issue-121099.rs:10:31
   |
LL | global_asm!("/* {} */", const 1 / 0);
   |                               ^^^^^ attempt to divide `1_i32` by zero

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0080`.
